Fixed formatting for JSON data. \\n replaced with <br> for new lines. \" replaced with white space in place of italics. Added comments to js.js

--- a/css/css.css
+++ b/css/css.css
@@ -43,23 +43,16 @@ h1 {
     line-height: 1.5em;
     height: 15em;
     white-space: normal;
-    overflow: hidden;
+    overflow: scroll;
     text-overflow: ellipsis;
+    -webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
+    mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
+    overflow-y: scroll;
 }
 
-#contents:after {
-    content  : "";
-    position : absolute;
-    z-index  : 1;
-    bottom   : 0;
-    left     : 0;
-    pointer-events   : none;
-    background-image : linear-gradient(to bottom, 
-                      rgba(255,255,255, 0), 
-                      rgba(255,255,255, 1) 95%);
-    width    : 100%;
-    height   : 10em;
-  }
+  #contents::-webkit-scrollbar {
+    display: none;
+}
 
 
 
